# ggdoe-tp-poo

./: CMakeLists.txt  README.md  plot_data.gp  plot_data.py
include/: Fabrique.h  ITimeDiscretization.h  Problem.h  Timer.h  UniformTimeDiscretization.h  Variable.h
src/: Equation.cpp  Equation.h  Fabrique.cpp  Fabrique.h  ITimeDiscretization.cpp  ITimeDiscretization.h  Integrator.h  Integrators.h  Problem.cpp  Problem.h  Timer.cpp  Timer.h  UniformTimeDiscretization.cpp  UniformTimeDiscretization.h  Variable.cpp  Variable.h  main.cpp
src/test/: test.cpp
